--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -56,3 +56,21 @@
     color: rgba(250, 250, 250, var(--tw-text-opacity)) !important;
   }
 }
+
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
+
+.skeleton {
+  /* Charcoal base */
+  background-color: #303030;
+  /* Lighter sweep */
+  background-image: linear-gradient(to right, #303030 0%, #4a4a4a 50%, #303030 100%);
+  background-size: 200% 100%;
+  animation: shimmer 1.5s infinite;
+}
